FIX java retro-compatibility
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>